[package]
name = "Ion"
version = "0.1.0"
authors = ["Zor <zorftw@gmail.com>"]
edition = "2018"

# Create a dll instead
[lib]
name = "ion"
crate-type = ["cdylib"] # Dynamic libary

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(windows)'.dependencies]
winapi = { version = "^0.3", features = ["minwindef", "memoryapi", "consoleapi", "libloaderapi", "winnt", "wincon", "winuser", "processthreadsapi"] }
lazy_static = {version = "1.3.0"}
